[PERF] Eliminate render-loop object allocations to lower GC churn