@@ -1,12 +1,18 @@
 package net.dawson.adorablehamsterpets.entity.custom;
 
+import net.dawson.adorablehamsterpets.AdorableHamsterPets;
+import net.minecraft.util.Identifier;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
+/**
+ * Defines all available color variations and overlay patterns for Hamster entities.
+ * Pre-caches texture identifiers to eliminate render-loop object allocations.
+ */
 public enum HamsterVariant {
 
-    // --- BLACK Variants (Base + Overlays) ---
+    // --- Black Variants ---
     BLACK(1, "black", null),
     BLACK_OVERLAY1(15, "black", "overlay1"),
     BLACK_OVERLAY2(16, "black", "overlay2"),
@@ -17,7 +23,7 @@ public enum HamsterVariant {
     BLACK_OVERLAY7(21, "black", "overlay7"),
     BLACK_OVERLAY8(22, "black", "overlay8"),
 
-    // --- BLUE Variants (Base + Overlays) ---
+    // --- Blue Variants ---
     BLUE(55, "blue", null),
     BLUE_OVERLAY1(57, "blue", "overlay1"),
     BLUE_OVERLAY2(58, "blue", "overlay2"),
@@ -28,7 +34,7 @@ public enum HamsterVariant {
     BLUE_OVERLAY7(63, "blue", "overlay7"),
     BLUE_OVERLAY8(64, "blue", "overlay8"),
 
-    // --- CHOCOLATE Variants (Base + Overlays) ---
+    // --- Chocolate Variants ---
     CHOCOLATE(2, "chocolate", null),
     CHOCOLATE_OVERLAY1(23, "chocolate", "overlay1"),
     CHOCOLATE_OVERLAY2(24, "chocolate", "overlay2"),
@@ -39,7 +45,7 @@ public enum HamsterVariant {
     CHOCOLATE_OVERLAY7(29, "chocolate", "overlay7"),
     CHOCOLATE_OVERLAY8(30, "chocolate", "overlay8"),
 
-    // --- CREAM Variants (Base + Overlays) ---
+    // --- Cream Variants ---
     CREAM(3, "cream", null),
     CREAM_OVERLAY1(31, "cream", "overlay1"),
     CREAM_OVERLAY2(32, "cream", "overlay2"),
@@ -50,7 +56,7 @@ public enum HamsterVariant {
     CREAM_OVERLAY7(37, "cream", "overlay7"),
     CREAM_OVERLAY8(38, "cream", "overlay8"),
 
-    // --- DARK_GRAY Variants (Base + Overlays) ---
+    // --- Dark Gray Variants ---
     DARK_GRAY(4, "dark_gray", null),
     DARK_GRAY_OVERLAY1(39, "dark_gray", "overlay1"),
     DARK_GRAY_OVERLAY2(40, "dark_gray", "overlay2"),
@@ -61,7 +67,7 @@ public enum HamsterVariant {
     DARK_GRAY_OVERLAY7(45, "dark_gray", "overlay7"),
     DARK_GRAY_OVERLAY8(46, "dark_gray", "overlay8"),
 
-    // --- LAVENDER Variants (Base + Overlays) ---
+    // --- Lavender Variants ---
     LAVENDER(56, "lavender", null),
     LAVENDER_OVERLAY1(65, "lavender", "overlay1"),
     LAVENDER_OVERLAY2(66, "lavender", "overlay2"),
@@ -72,7 +78,7 @@ public enum HamsterVariant {
     LAVENDER_OVERLAY7(71, "lavender", "overlay7"),
     LAVENDER_OVERLAY8(72, "lavender", "overlay8"),
 
-    // --- LIGHT_GRAY Variants (Base + Overlays) ---
+    // --- Light Gray Variants ---
     LIGHT_GRAY(5, "light_gray", null),
     LIGHT_GRAY_OVERLAY1(47, "light_gray", "overlay1"),
     LIGHT_GRAY_OVERLAY2(48, "light_gray", "overlay2"),
@@ -83,7 +89,7 @@ public enum HamsterVariant {
     LIGHT_GRAY_OVERLAY7(53, "light_gray", "overlay7"),
     LIGHT_GRAY_OVERLAY8(54, "light_gray", "overlay8"),
 
-    // --- ORANGE Variants (Base + Overlays) ---
+    // --- Orange Variants ---
     ORANGE(0, "orange", null),
     ORANGE_OVERLAY1(7, "orange", "overlay1"),
     ORANGE_OVERLAY2(8, "orange", "overlay2"),
@@ -94,30 +100,30 @@ public enum HamsterVariant {
     ORANGE_OVERLAY7(13, "orange", "overlay7"),
     ORANGE_OVERLAY8(14, "orange", "overlay8"),
 
-    // --- WHITE (Base Only) ---
-    WHITE(6, "white", null); // White has no overlay by design
+    // --- White Variant ---
+    WHITE(6, "white", null); // White has no overlay
 
+    /* ──────────────────────────────────────────────────────────────────────────────
+     *        Static Registration and Setup
+     * ────────────────────────────────────────────────────────────────────────────*/
 
     private static final HamsterVariant[] BY_ID = Arrays.stream(values())
             .sorted(Comparator.comparingInt(HamsterVariant::getId))
             .toArray(HamsterVariant[]::new);
 
-    private final int id;
-    private final String baseTextureName;
-    @Nullable
-    private final String overlayTextureName;
-
-    // --- Caches for helper methods ---
     private static final Map<HamsterVariant, List<HamsterVariant>> VARIANTS_BY_BASE_CACHE = new EnumMap<>(HamsterVariant.class);
-    private record BaseOverlayPair(HamsterVariant base, @Nullable String overlay) {}
     private static final Map<BaseOverlayPair, HamsterVariant> VARIANT_BY_BASE_OVERLAY_CACHE = new HashMap<>();
 
+    // Compound key for fast exact variant lookups
+    private record BaseOverlayPair(HamsterVariant base, @Nullable String overlay) {}
+
     static {
-        // Populate VARIANTS_BY_BASE_CACHE
-        // Ensure this list matches the alphabetical order of base colors
-        List<HamsterVariant> baseColors = Arrays.asList(
+        // Order matches alphabetical base colors
+        List<HamsterVariant> baseColors = List.of(
                 BLACK, BLUE, CHOCOLATE, CREAM, DARK_GRAY, LAVENDER, LIGHT_GRAY, ORANGE, WHITE
         );
+
+        // Group variants by their base color
         for (HamsterVariant base : baseColors) {
             List<HamsterVariant> variants = new ArrayList<>();
             for (HamsterVariant currentVariant : values()) {
@@ -128,17 +134,76 @@ public enum HamsterVariant {
             VARIANTS_BY_BASE_CACHE.put(base, List.copyOf(variants));
         }
 
-        // Populate VARIANT_BY_BASE_OVERLAY_CACHE
+        // Map precise base+overlay combos to actual enum instances
         for (HamsterVariant variant : values()) {
             VARIANT_BY_BASE_OVERLAY_CACHE.put(new BaseOverlayPair(variant.getBaseVariant(), variant.getOverlayTextureName()), variant);
         }
     }
 
+    /* ──────────────────────────────────────────────────────────────────────────────
+     *        Static Utilities
+     * ────────────────────────────────────────────────────────────────────────────*/
+
+    /**
+     * Safely retrieves a variant by its integer ID.
+     */
+    public static HamsterVariant byId(int id) {
+        if (id < 0 || id >= BY_ID.length) {
+            return ORANGE; // fallback for safety
+        }
+        return BY_ID[id];
+    }
+
+    /**
+     * Gets all valid overlay combinations for a specific base color.
+     */
+    public static List<HamsterVariant> getVariantsForBase(HamsterVariant baseColorEnum) {
+        return VARIANTS_BY_BASE_CACHE.getOrDefault(baseColorEnum, List.of(baseColorEnum));
+    }
+
+    /**
+     * Finds the exact variant matching a base color and overlay pattern.
+     */
+    public static HamsterVariant getVariantByBaseAndOverlay(HamsterVariant baseColorEnum, @Nullable String overlayName) {
+        HamsterVariant result = VARIANT_BY_BASE_OVERLAY_CACHE.get(new BaseOverlayPair(baseColorEnum, overlayName));
+        return result != null ? result : baseColorEnum; // fallback to plain base color
+    }
+
+    /* ──────────────────────────────────────────────────────────────────────────────
+     *        Instance Fields
+     * ────────────────────────────────────────────────────────────────────────────*/
+
+    private final int id;
+    private final String baseTextureName;
+    @Nullable private final String overlayTextureName;
+    private final Identifier baseTextureId;
+    @Nullable private final Identifier overlayTextureId;
+
+    /* ──────────────────────────────────────────────────────────────────────────────
+     *        Constructors
+     * ────────────────────────────────────────────────────────────────────────────*/
+
     HamsterVariant(int id, String baseTextureName, @Nullable String overlayTextureName) {
         this.id = id;
         this.baseTextureName = baseTextureName;
         this.overlayTextureName = overlayTextureName;
+
+        // Pre-cache identifiers
+        this.baseTextureId = Identifier.of(AdorableHamsterPets.MOD_ID, "textures/entity/hamster/" + baseTextureName + ".png");
+
+        // White explicitly lacks overlays
+        if ("white".equals(this.baseTextureName) && this.overlayTextureName == null) {
+            this.overlayTextureId = null;
+        } else if (this.overlayTextureName != null) {
+            this.overlayTextureId = Identifier.of(AdorableHamsterPets.MOD_ID, "textures/entity/hamster/" + overlayTextureName + ".png");
+        } else {
+            this.overlayTextureId = null;
+        }
     }
+
+    /* ──────────────────────────────────────────────────────────────────────────────
+     *        Public API Methods
+     * ────────────────────────────────────────────────────────────────────────────*/
 
     public int getId() {
         return this.id;
@@ -150,13 +215,27 @@ public enum HamsterVariant {
 
     @Nullable
     public String getOverlayTextureName() {
-        // White variant never has an overlay, this check is more robust
-        if ("white".equals(this.baseTextureName) && this.overlayTextureName == null) {
-            return null;
-        }
         return this.overlayTextureName;
     }
 
+    /**
+     * Gets the pre-cached Identifier for the base texture.
+     */
+    public Identifier getBaseTextureId() {
+        return this.baseTextureId;
+    }
+
+    /**
+     * Gets the pre-cached Identifier for the overlay texture, if it exists.
+     */
+    @Nullable
+    public Identifier getOverlayTextureId() {
+        return this.overlayTextureId;
+    }
+
+    /**
+     * Resolves the root base color variant for this specific instance.
+     */
     public HamsterVariant getBaseVariant() {
         return switch (this.baseTextureName) {
             case "black" -> BLACK;
@@ -166,36 +245,8 @@ public enum HamsterVariant {
             case "dark_gray" -> DARK_GRAY;
             case "lavender" -> LAVENDER;
             case "light_gray" -> LIGHT_GRAY;
-            case "orange" -> ORANGE;
             case "white" -> WHITE;
-            default -> ORANGE; // Fallback, should ideally not be reached
+            default -> ORANGE; // Ultimate fallback
         };
-    }
-
-    public static HamsterVariant byId(int id) {
-        if (id < 0 || id >= BY_ID.length) {
-            return ORANGE; // Default fallback
-        }
-        return BY_ID[id];
-    }
-
-    /**
-     * Gets a list of all variants (including the base itself) for a given base color.
-     * @param baseColorEnum The base color (e.g., HamsterVariant.CHOCOLATE).
-     * @return A list of matching HamsterVariant enums.
-     */
-    public static List<HamsterVariant> getVariantsForBase(HamsterVariant baseColorEnum) {
-        return VARIANTS_BY_BASE_CACHE.getOrDefault(baseColorEnum, List.of(baseColorEnum));
-    }
-
-    /**
-     * Gets a specific variant by its base color and overlay name.
-     * @param baseColorEnum The base color enum (e.g., HamsterVariant.LAVENDER).
-     * @param overlayName The name of the overlay (e.g., "overlay1"), or null for no overlay.
-     * @return The matching HamsterVariant, or the baseColorEnum if no exact match is found.
-     */
-    public static HamsterVariant getVariantByBaseAndOverlay(HamsterVariant baseColorEnum, @Nullable String overlayName) {
-        HamsterVariant result = VARIANT_BY_BASE_OVERLAY_CACHE.get(new BaseOverlayPair(baseColorEnum, overlayName));
-        return result != null ? result : baseColorEnum; // Fallback to base color if no specific overlay match
     }
 }
